arm64: dts: broadcom: bcm2712: Add HEVC decode DT node
Configures the HEVC decoder found on BCM2712 / Pi5.

Signed-off-by: Dave Stevenson <dave.stevenson@raspberrypi.com>

--- a/arch/arm64/boot/dts/broadcom/bcm2712-rpi-5-b.dts
+++ b/arch/arm64/boot/dts/broadcom/bcm2712-rpi-5-b.dts
@@ -743,8 +743,14 @@ spi10_cs_pins: &spi10_cs_gpio1 {};
 	};
 };
 
+&hevc_dec {
+	clocks = <&firmware_clocks 11>;
+	clock-names = "hevc";
+};
+
 / {
 	__overrides__ {
 		sd_cqe = <&sdio1>, "supports-cqe?";
 	};
 };
+
