fixup rpivid dt

--- a/arch/arm64/boot/dts/broadcom/bcm2712.dtsi
+++ b/arch/arm64/boot/dts/broadcom/bcm2712.dtsi
@@ -1244,10 +1244,10 @@
 			iommus = <&iommu2>;
 		};
 
-		hevc_dec: codec@800000 {
+		hevc_dec: codec@1000800000 {
 			compatible = "raspberrypi,hevc-dec";
-			reg = <0x00 0x00800000  0x0 0x10000>, /* HEVC */
-			      <0x00 0x00840000  0x0 0x1000>;  /* INTC */
+			reg = <0x10 0x00800000  0x0 0x10000>, /* HEVC */
+			      <0x10 0x00840000  0x0 0x1000>;  /* INTC */
 			reg-names = "hevc",
 				    "intc";
 			interrupts = <GIC_SPI 98 IRQ_TYPE_LEVEL_HIGH>;
