--- a/arch/arm/configs/bcm2711_defconfig
+++ b/arch/arm/configs/bcm2711_defconfig
@@ -950,6 +950,7 @@ CONFIG_RADIO_WL128X=m
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_VIDEO_MUX=m
 CONFIG_VIDEO_BCM2835_UNICAM=m
+CONFIG_VIDEO_RPI_HEVC_DEC=m
 CONFIG_VIDEO_ARDUCAM_64MP=m
 CONFIG_VIDEO_ARDUCAM_PIVARIETY=m
 CONFIG_VIDEO_IMX219=m
@@ -1387,7 +1388,6 @@ CONFIG_PRISM2_USB=m
 CONFIG_R8712U=m
 CONFIG_VT6656=m
 CONFIG_STAGING_MEDIA=y
-CONFIG_VIDEO_RPIVID=m
 CONFIG_STAGING_MEDIA_DEPRECATED=y
 CONFIG_FB_TFT=m
 CONFIG_FB_TFT_AGM1264K_FL=m
