--- a/arch/arm64/configs/bcm2712_defconfig
+++ b/arch/arm64/configs/bcm2712_defconfig
@@ -986,6 +986,7 @@ CONFIG_RADIO_WL128X=m
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_VIDEO_MUX=m
 CONFIG_VIDEO_BCM2835_UNICAM=m
+CONFIG_VIDEO_RPI_HEVC_DEC=m
 CONFIG_VIDEO_RASPBERRYPI_PISP_BE=m
 CONFIG_VIDEO_RP1_CFE=m
 CONFIG_V4L_TEST_DRIVERS=y
@@ -1440,7 +1441,6 @@ CONFIG_PRISM2_USB=m
 CONFIG_R8712U=m
 CONFIG_VT6656=m
 CONFIG_STAGING_MEDIA=y
-CONFIG_VIDEO_RPIVID=m
 CONFIG_STAGING_MEDIA_DEPRECATED=y
 CONFIG_FB_TFT=m
 CONFIG_FB_TFT_AGM1264K_FL=m
